| Summary: | ASTERISK-21873: Asterisk API Improvements - filter channels that should never be shown | ||
| Reporter: | Matt Jordan (mjordan) | Labels: | Asterisk12 |
| Date Opened: | 2013-06-06 12:04:53 | Date Closed: | 2013-07-19 14:28:03 |
| Priority: | Major | Regression? | No |
| Status: | Closed/Complete | Components: | Core/ManagerInterface Core/Stasis |
| Versions: | Frequency of Occurrence | ||
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | There are a number of channels that should never be conveyed over AMI. These channels have meaning only inside Asterisk and the usage of a channel to perform that action is merely an implementation detail. If an external system attempted to manipulate that channel, "bad things" would inevitably occur.
To date, those channels are: * CBAnn - the confbridge announcer channel * CBRec - the confbridge recorder channel It is expected, however, that other channels will be added to this list. A generic function should be added to AMI channels and bridges that excludes events in relation to those channels. Thus, AMI clients should not see any message pertaining to that channel, regardless of the topic that message is published on. | ||
| Comments: | By: Richard Mudgett (rmudgett) 2013-06-06 14:45:53.827-0500 A new field to the channel technology should be able to indicate if any of their channels should be visible. By: Kinsey Moore (kmoore) 2013-06-19 08:59:22.935-0500 The level of the hiding taking place here is also important. Should it be hidden only from AMI or should it never be mentioned in Stasis-Core at all? By: Kinsey Moore (kmoore) 2013-06-19 13:04:12.647-0500 Comment addressed elsewhere, this will not prevent messages from coming across Stasis-Core, but will prevent these channels from being logged in CDR, CEL, AMI, and possibly app_stasis/res_stasis. | ||