res/parking/parking_manager.c
@@ -266,6 +266,9 @@ static struct ast_str *manager_build_parked_call_string(const struct ast_parked_
 	}
 
 	parkee_string = ast_manager_build_channel_state_string_prefix(payload->parkee, "Parkee");
+	if (!parkee_string) {
+		return NULL;
+	}
 
 	if (payload->retriever) {
 		retriever_string = ast_manager_build_channel_state_string_prefix(payload->retriever, "Retriever");
